Небольшие поправки и дополнения в README

--- a/README
+++ b/README
@@ -3,7 +3,7 @@
 		ФИО			Почта
 	- Охотников Виктор 	viktorokh96@mail.ru
 	- Казаков Артём
-	- Желтухие Андрей 
+	- Желтухин Андрей 
 
 Эта проста игра, созданная в учебных целей для введения в ООП проектирование.
 Её название (не окончательное) "Vomit Blood", что в переводе с английского 
@@ -11,3 +11,12 @@
 двигается по динамическому игровому полю, минуя всевозможные препятствия которые
 встают на пути отважного героя. Не дайте умереть головастику, пройдя игру до конца,
 набрав как можно больше очков, иначе он умрет в кровавой рвотной жиже.
+
+
+Необходимые библиотеки для работы игры:
+
+	- SFML 
+	
+	Пример установки на Linux Debian:
+
+		sudo apt-get install libsfml-dev
