--- a/README
+++ b/README
@@ -3,7 +3,7 @@
 		ФИО			Почта
 	- Охотников Виктор 	viktorokh96@mail.ru
 	- Казаков Артём
-	- Желтухин Андрей 
+	- Желтухин Андрей 	zav.an@ya.ru
 
 Эта проста игра, созданная в учебных целей для введения в ООП проектирование.
 Её название (не окончательное) "Vomit Blood", что в переводе с английского 
